Fixes Header overlap issue
Fixes issue with the artifact buttons appearing overtop of the header in the send to spira menu if the user scrolls down.

--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -119,6 +119,7 @@ ul.form {
     align-items: center;
     display: flex;
     padding: 10px 5px;
+    z-index: 1;
 }
 
 .header-heading {
